--- a/demo/index.html
+++ b/demo/index.html
@@ -19,9 +19,9 @@
           Open dropdown 1
         </button>
         <ul id="dropdown-1" class="c-dropdown__menu">
-          <li data-item><a href="#" class="c-dropdown__link" data-link><span>Option 1</span></a></li>
-          <li data-item><a href="#" class="c-dropdown__link" data-link>Option 2</a></li>
-          <li data-item><a href="#" class="c-dropdown__link" data-link>Option 3</a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus><span>Option 1</span></a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus>Option 2</a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus>Option 3</a></li>
         </ul>
       </div>
       <div class="c-dropdown">
@@ -33,9 +33,9 @@
           Open dropdown 2
         </button>
         <ul id="dropdown-2" class="c-dropdown__menu">
-          <li data-item><a href="#" class="c-dropdown__link" data-link><span>Option 1</span></a></li>
-          <li data-item><a href="#" class="c-dropdown__link" data-link>Option 2</a></li>
-          <li data-item><a href="#" class="c-dropdown__link" data-link>Option 3</a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus><span>Option 1</span></a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus>Option 2</a></li>
+          <li data-item><a href="#" class="c-dropdown__link" data-focus>Option 3</a></li>
         </ul>
       </div>
     </article>
